# parallel-edit-distance

./: .gitignore  CMakeLists.txt  README.md  parallel.cpp  parallel_diag_fronts.cpp  parallel_tiling.cpp  plotter.ipynb  sequential.cpp
CUDA/: main.cu
